target_sources(adolc PRIVATE
               adalloc.c
               adouble.cpp
               adouble_tl.cpp
               adouble_tl_hov.cpp
               adouble_tl_indo.cpp
               advector.cpp
               ampisupport.cpp
               ampisupportAdolc.cpp
               checkpointing.cpp
               convolut.c
               externfcts.cpp
               externfcts2.cpp
               fixpoint.cpp
               fortutils.c
               forward_partx.c
               fos_forward.c
               fos_pl_forward.c
               fos_pl_reverse.c
               fos_pl_sig_forward.c
               fos_reverse.c
               fov_forward.c
               fov_offset_forward.c
               fov_pl_sig_forward.c
               fos_pl_sig_reverse.c
               fov_pl_forward.c
               fov_reverse.c
               hos_forward.c
               hos_ov_reverse.c
               hos_reverse.c
               hov_forward.c
               hov_reverse.c
               hov_wk_forward.c
               indopro_forward_pl.c
               indopro_forward_s.c
               indopro_forward_t.c
               int_forward_s.c
               int_forward_t.c
               int_reverse_s.c
               int_reverse_t.c
               interfaces.cpp
               interfacesf.c
               medipacksupport.cpp
               nonl_ind_forward_s.c
               nonl_ind_forward_t.c
               nonl_ind_old_forward_s.c
               nonl_ind_old_forward_t.c
               param.cpp
               revolve.c
               rpl_malloc.c
               storemanager.cpp
               tape_handling.cpp
               taping.c
               zos_forward.c
               zos_pl_forward.c
              )

add_subdirectory(drivers)
add_subdirectory(lie)
add_subdirectory(tapedoc)
if(ENABLE_SPARSE)
  add_subdirectory(sparse)
endif()
