install(FILES
        adtb_types.h     
        adalloc.h
        adolcerror.h
        adolcexport.h
        adolc.h
        adolc_openmp.h
        adolc_sparse.h
        adoublecuda.h
        adtl.h
        adtl_hov.h
        adtl_indo.h
        adutilsc.h
        adutils.h
        advector.h
        buffer_temp.h   
        checkpointing_p.h   
        checkpointing.h
        convolut.h
        dvlparms.h
        edfclasses.h
        externfcts2.h
        externfcts.h
        fixpoint.h
        fortutils.h
        interfaces.h
        medipacksupport_p.h 
        oplate.h 
        revolve.h
        rpl_malloc.h 
        storemanager.h
        tape_interface.h
        DESTINATION "include/adolc")

add_subdirectory(drivers)
add_subdirectory(internal)
add_subdirectory(lie)
add_subdirectory(tapedoc)
add_subdirectory(valuetape)
